--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
             <nav>
                 <div class="logo">
                     <i class="fas fa-chess-knight"></i>
-                    ChessTournament Pro
+                    Zugzwang Chess Pairings
                 </div>
                 <ul class="nav-links">
                     <li><a href="#features">Features</a></li>
@@ -485,7 +485,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-section">
-                    <h3>ChessTournament Pro</h3>
+                    <h3>Zugzwang Chess Pairings</h3>
                     <p>The ultimate solution for organizing and managing chess tournaments of any size.</p>
                 </div>
                 <div class="footer-section">
@@ -508,7 +508,7 @@
                 </div>
             </div>
             <div class="copyright">
-                <p>&copy; 2023 ChessTournament Pro. All rights reserved.</p>
+                <p>&copy; 2025 Zugzwang Chess Pairings. All rights reserved.</p>
             </div>
         </div>
     </footer>
